# cityscape-opengl

./: .gitignore  README.md  cityscape.cpp  cityscape.h
assets/: monkey-test.gltf  townhouse.glb  townhouse.gltf
city-opengl/: city-opengl.sln  city-opengl.vcxproj  city-opengl.vcxproj.filters  glad.c
city-opengl/city-opengl/: city-opengl.vcxproj
city-opengl/city-opengl/x64/Debug/: city-opengl.exe.recipe  city-opengl.ilk  vc143.idb
city-opengl/city-opengl/x64/Debug/city-opengl.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
city-opengl/includes/glad/: glad.h
city-opengl/solar-sy.890fdacf/x64/Debug/: solar-system-opengl.exe.recipe  solar-system-opengl.ilk  vc143.idb
city-opengl/solar-sy.890fdacf/x64/Debug/solar-sy.890fdacf.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  solar-system-opengl.lastbuildstate
headers/: cityscape.h  model_loader.h
src/: CMakeLists.txt  cityscape.cpp  main.cpp  model_loader.cpp
